--- a/src/Views/Auth/WhoAmI.cshtml
+++ b/src/Views/Auth/WhoAmI.cshtml
@@ -1,8 +1,8 @@
-﻿@model System.Security.Claims.ClaimsPrincipal
+﻿@model ManageCoursesUi.Controllers.WhoAmIViewModel
 
 <h2>Who Am I?</h2>
 
-<h3>Claims</h3>
+<h3>Raw Claims</h3>
 <table>
     <thead>
         <tr>
@@ -11,7 +11,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var claim in Model.Claims)
+        @foreach (var claim in Model.RawClaims)
         {
             <tr>
                 <td>@claim.Type</td>
@@ -20,3 +20,14 @@
         }
     </tbody>
 </table>
+<h3>Organisation</h3>
+<dl>
+    <dt>id</dt>
+    <dd>@Model.Org.id</dd>
+    <dt>name</dt>
+    <dd>@Model.Org.name</dd>
+    <dt>category id</dt>
+    <dd>@Model.Org.category.id</dd>
+    <dt>category name</dt>
+    <dd>@Model.Org.category.name</dd>
+</dl>
