C# style claim property names
PR feedback. Still deserializes fine.

--- a/src/Views/Auth/WhoAmI.cshtml
+++ b/src/Views/Auth/WhoAmI.cshtml
@@ -25,13 +25,13 @@
 {
 <dl>
     <dt>id</dt>
-    <dd>@Model.Org.id</dd>
+    <dd>@Model.Org.Id</dd>
     <dt>name</dt>
-    <dd>@Model.Org.name</dd>
+    <dd>@Model.Org.Name</dd>
     <dt>category id</dt>
-    <dd>@Model.Org.category?.id</dd>
+    <dd>@Model.Org.Category?.Id</dd>
     <dt>category name</dt>
-    <dd>@Model.Org.category?.name</dd>
+    <dd>@Model.Org.Category?.Name</dd>
 </dl>
 }
 else
