--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -1,71 +1,73 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ManageCoursesUi</title>
+﻿@{
+    Layout = "~/Views/Shared/_Layout_base.cshtml";
+    ViewData["serviceName"] = "Manage courses";
 
+    ViewBag.Title = (String.IsNullOrEmpty(ViewBag.Title) ? "" : ViewBag.Title + " - ")
+        + ViewData["serviceName"] + " - GOV.UK";
+    ViewData["headerClass"] = "with-proposition";
+}
+
+@section head {
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+
+    @if (ViewData["SEND_ANALYTICS"] != null)
+    {
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112932657-1"></script>
+        <script src="~/javascripts/analytics-config.js"></script>
+    }
+}
+
+@section propositionHeader {
+    <div class="header-proposition">
+        <div class="content">
+            @*<a href="#proposition-links" class="js-header-toggle menu">Menu</a>*@
+            <nav id="proposition-menu">
+                <a href="~/" id="proposition-name" role="link">@ViewData["serviceName"]</a>
+                @* <ul id="proposition-links">
+                    </ul>*@
+            </nav>
+        </div>
+    </div>
+}
+
+@section bodyEnd {
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
-</head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ManageCoursesUi</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
+        <script src="~/javascripts/govuk/details.polyfill.js"></script>
+        <script src="~/javascripts/govuk/selection-buttons.js"></script>
+        <script src="~/javascripts/govuk/show-hide-content.js"></script>
+}
+
+@section footerSupportLinks {
+    <h2 class="visuallyhidden">Support links</h2>
+    @*<ul>
+        <li><a href="mailto:becomingateacher@digital.education.gov.uk?subject=Search%20beta%20feedback">Give feedback</a></li>
+        <li><a href="/cookies">Cookies</a></li>
+        <li><a href="/privacy-policy">Privacy Policy</a></li>
+        <li><a href="/terms-conditions">Terms and conditions</a></li>
+    </ul>*@
+}
+
+<main role="main">
+    <div class="phase-banner-wrapper">
+        @* PRIVATE_BETA_HACK *@
+        @*<div class="private-beta-warning font-xsmall">
+            You can <a href="https://www.ucas.com/ucas/teacher-training/ucas-teacher-training-search-training-programmes">find teacher training in other subjects</a> on the UCAS website.
         </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - ManageCoursesUi</p>
-        </footer>
+        <div class="phase-banner">
+            <p>
+                <strong class="phase-tag">BETA</strong>
+                <span>This is a new service – your <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Search%20beta%20feedback">feedback</a> will help us to improve it.</span>
+            </p>
+        </div>*@
     </div>
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
-
-    @RenderSection("Scripts", required: false)
-</body>
-</html>
+    <div id="content">
+        @RenderBody()
+    </div>
+</main>
