--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
     else
     {
         <li><a asp-controller="Auth" asp-action="Login">Login</a></li>
+        <li><a href="https://signin-test-pfl-as.azurewebsites.net/register?client_id=bats&redirect_uri=https://localhost:44364/auth/cb">Register</a></li>
     }
 </ul>
 <div class="clearfix"></div>
