Added generic error page for user

--- a/src/Views/Shared/Error.cshtml
+++ b/src/Views/Shared/Error.cshtml
@@ -1,22 +1,23 @@
 ﻿@model ErrorViewModel
-@{
-    ViewData["Title"] = "Error";
-}
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<div class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+    @if (Model != null && Model.Messages.Any())
+    {
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">
+            You&#8217;ll need to correct some information.
+        </h2>
+
+        <ul class="error-summary-list">
+            @foreach (var message in Model.Messages)
+            {
+                <li><a href="#@message.Id-container">@message.Name</a></li>
+            }
+        </ul>
+    }
+    <h2 class="heading-medium error-summary-heading" id="error-summary-heading">
+        There was an error processing your request.
+    </h2>
+
+</div>
