--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using ManageCoursesUi.Controllers
+@{
     string name = null;
     if (User.Identity.IsAuthenticated)
     {
@@ -17,7 +18,7 @@
     else
     {
         <li><a asp-controller="Auth" asp-action="Login">Login</a></li>
-        <li><a href="https://signin-test-pfl-as.azurewebsites.net/register?client_id=bats&redirect_uri=https://localhost:44364/auth/cb">Register</a></li>
+        <li><a href="https://signin-test-pfl-as.azurewebsites.net/register?client_id=bats&redirect_uri=https://localhost:44364/@AuthController.RegistrationCompleteCallbackPath">Register</a></li>
     }
 </ul>
 <div class="clearfix"></div>
