--- a/src/ui/Views/Shared/_Layout_base.cshtml
+++ b/src/ui/Views/Shared/_Layout_base.cshtml
@@ -19,16 +19,15 @@
     <!--[if gte IE 9]><!-->
     <link rel="stylesheet" media="all" href="/css/fonts.css" /><!--<![endif]-->
     <!--[if lt IE 9]><script src="/javascripts/ie.js"></script><![endif]-->
-
     @*<!--[if gt IE 8]><!-->
-    <link href="/css/govuk-elements-styles.css" rel="stylesheet" type="text/css"><!--<![endif]-->
-    <!--[if IE 6]><link href="/css/govuk-elements-styles-ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 7]><link href="/css/govuk-elements-styles-ie7.css" rel="stylesheet" type="text/css" /><![endif]-->
-    <!--[if IE 8]><link href="/css/govuk-elements-styles-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
+        <link href="/css/govuk-elements-styles.css" rel="stylesheet" type="text/css"><!--<![endif]-->
+        <!--[if IE 6]><link href="/css/govuk-elements-styles-ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+        <!--[if IE 7]><link href="/css/govuk-elements-styles-ie7.css" rel="stylesheet" type="text/css" /><![endif]-->
+        <!--[if IE 8]><link href="/css/govuk-elements-styles-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 
-    <link rel="stylesheet" href="~/css/govuk-pagination.css" />*@
+        <link rel="stylesheet" href="~/css/govuk-pagination.css" />*@
 
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="shortcut icon" href="~/images/favicon.ico" type="image/x-icon" />
 
     <link rel="mask-icon" href="~/images/gov.uk_logotype_crown.svg" color="#0b0c0c">
