Added course details page & styling

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -18,9 +18,10 @@
 <ul>
     @foreach (var course in Model)
     {
-        <div class="heading-medium remove-top-margin">
-            <a href="#">@course.Title</a>
-        </div>
-        
+        <li>
+            <div class="heading-medium remove-top-margin">
+                <a href="@Url.Action("details", "courses", 1)">@course.Title</a>
+            </div>
+        </li>
     }
 </ul>
