--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -20,7 +20,7 @@
     {
         <li>
             <div class="heading-medium remove-top-margin">
-                <a href="@Url.Action("details", "courses", 1)">@course.Title</a>
+                <a href="@Url.Action("details", "courses", new {course.Id})">@course.Title</a>
             </div>
         </li>
     }
