Use Course.UcasCode for details view URL
Id is changed every time data is loaded.
We might not want to ucas code in the long run but it'll do for now.

This results in URLs like https://localhost:44364/courses/details?UcasCode=334L

I'll look at the style of that in a later commit

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -20,7 +20,7 @@
     {
         <li>
             <div class="heading-medium remove-top-margin">
-                <a href="@Url.Action("details", "courses", new {course.Id})">@course.Title</a>
+                <a href="@Url.Action("details", "courses", new {course.UcasCode})">@course.Title</a>
             </div>
         </li>
     }
