--- a/src/ui/Views/Courses/Details.cshtml
+++ b/src/ui/Views/Courses/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model CourseDetailsViewModel
+﻿@using GovUk.Education.ManageCourses.Ui.ViewModels
+@model GovUk.Education.ManageCourses.Ui.ViewModels.CourseDetailsViewModel
 
 @{
     Layout = "_Layout";
