--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<GovUk.Education.ManageCourses.ApiClient.Course>
+﻿@using GovUk.Education.ManageCourses.ApiClient.Generated
+@model IEnumerable<GovUk.Education.ManageCourses.ApiClient.Generated.Course>
 
 @{
     Layout = "_Layout";
