--- a/src/ui/Views/Home/Index.cshtml
+++ b/src/ui/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@inject ManageCoursesConfig config
+﻿@using GovUk.Education.ManageCourses.Ui
+@inject ManageCoursesConfig config
 @{
     string name = null;
     if (User.Identity.IsAuthenticated)
