--- a/src/ui/Views/Shared/Error.cshtml
+++ b/src/ui/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using GovUk.Education.ManageCourses.Ui.ViewModels
+@model GovUk.Education.ManageCourses.Ui.ViewModels.ErrorViewModel
 
 <div class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
 
