--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@inject ManageCoursesConfig config
+﻿@using GovUk.Education.ManageCourses.Ui
+@inject ManageCoursesConfig config
 @{
     Layout = "~/Views/Shared/_Layout_base.cshtml";
     ViewData["serviceName"] = "Publish teacher training courses";
