Move imports to _ViewImports

--- a/src/ui/Views/Courses/Details.cshtml
+++ b/src/ui/Views/Courses/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using GovUk.Education.ManageCourses.Ui.ViewModels
-@model GovUk.Education.ManageCourses.Ui.ViewModels.CourseDetailsViewModel
+﻿@model CourseDetailsViewModel
 
 @{
     Layout = "_Layout";
