--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using GovUk.Education.ManageCourses.ApiClient.Generated
-@model IEnumerable<GovUk.Education.ManageCourses.ApiClient.Generated.Course>
+﻿@model IEnumerable<Course>
 
 @{
     Layout = "_Layout";
