--- a/src/ui/Views/Auth/WhoAmI.cshtml
+++ b/src/ui/Views/Auth/WhoAmI.cshtml
@@ -1,5 +1,4 @@
-﻿@using GovUk.Education.ManageCourses.Ui.Controllers
-@model GovUk.Education.ManageCourses.Ui.Controllers.WhoAmIViewModel
+﻿@model GovUk.Education.ManageCourses.Ui.Controllers.WhoAmIViewModel
 
 <h2>Who Am I?</h2>
 
