--- a/src/ui/Views/Shared/Error.cshtml
+++ b/src/ui/Views/Shared/Error.cshtml
@@ -1,5 +1,4 @@
-﻿@using GovUk.Education.ManageCourses.Ui.ViewModels
-@model GovUk.Education.ManageCourses.Ui.ViewModels.ErrorViewModel
+﻿@model ErrorViewModel
 
 <div class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
 
