Remove "Generated" namespace
Splitting up Sau's commit into unrelated changes

--- a/src/ui/Views/_ViewImports.cshtml
+++ b/src/ui/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using GovUk.Education.ManageCourses.ApiClient.Generated
+@using GovUk.Education.ManageCourses.ApiClient
 @using GovUk.Education.ManageCourses.Ui.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
