Amended property name to organisation name

--- a/src/ui/Views/Courses/Imported.cshtml
+++ b/src/ui/Views/Courses/Imported.cshtml
@@ -10,7 +10,7 @@
         We’ve imported your training courses from UCAS
       </h1>
 
-      <p>We found @Model.TotalCount courses belonging to @Model.TrainingProviderName.</p>
+      <p>We found @Model.TotalCount courses belonging to @Model.OrganisationName.</p>
 
       <p>You need to:</p>
       <ul class="list list-bullet">
