--- a/src/ui/Views/Course/Index.cshtml
+++ b/src/ui/Views/Course/Index.cshtml
@@ -67,7 +67,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var school in course.schools)
+            @foreach (var school in course.Schools)
             {
             <tr>
                 <td>@school.Name</td>
