--- a/src/ui/Views/Course/Index.cshtml
+++ b/src/ui/Views/Course/Index.cshtml
@@ -70,7 +70,7 @@
             @foreach (var school in course.Schools)
             {
             <tr>
-                <td>@school.Name</td>
+                <td>@school.LocationName</td>
                 <td>@school.Address</td>
                 <td>@school.Code</td>
                 <td>Vacancies</td>
