--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -7,7 +7,7 @@
 <div class="breadcrumbs">
     <ol>
         <li><a href="/courses">@Model.OrganisationName</a></li>
-        <li><a href="/course/@Model.SubjectId">@Model.SubjectName</a></li>
+        <li><a href="/course/@Model.UcasCode">@Model.CourseTitle</a></li>
     </ol>
 </div>
 
