--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -20,7 +20,7 @@
     {
         <li>
             <div class="heading-medium remove-top-margin">
-                <a href="@Url.Action("details", "course", new {course.UcasCode})">@course.Title</a>
+                <a href="@Url.Action("details", "course", new {CourseTitle = course.Title})">@course.Title</a>
             </div>
         </li>
     }
