--- a/src/ui/Styles/site.scss
+++ b/src/ui/Styles/site.scss
@@ -29,3 +29,200 @@
         width: 960px;
     }
 }
+
+// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
+
+.remove-top-margin {
+    margin-top: 0;
+}
+
+.remove-bottom-margin {
+    margin-bottom: 0;
+}
+
+.add-bottom-margin {
+    margin-bottom: $gutter / 2;
+}
+
+.add-double-bottom-margin {
+    margin-bottom: $gutter;
+}
+
+.add-top-margin {
+    margin-top: $gutter / 2;
+}
+
+.add-margin-for-label {
+    margin-top: 25px;
+}
+
+.add-margin-for-label-with-help {
+    margin-top: 45px;
+}
+
+.form-control-full {
+    width: 100%;
+}
+
+.results-item {
+    margin-bottom: $gutter;
+}
+
+.metadata dt,
+.metadata dd {
+    display: inline-block;
+}
+
+.metadata dt {
+    width: 20%;
+}
+
+.metadata dd {
+    width: 79%;
+    margin-left: 0;
+}
+
+.filter-category {
+    background-color: $grey-3;
+    padding: 12px;
+    margin-bottom: 10px;
+}
+
+.filters {
+    background-color: $white;
+    padding: 10px;
+}
+
+.filter-heading {
+    margin-top: 3px;
+}
+
+.filter-link {
+    padding-top: 10px;
+}
+
+.tabs {
+    padding-left: 0;
+    border-bottom: 1px solid $border-colour;
+    font-size: 19px;
+    margin-bottom: $gutter;
+
+    li {
+        margin-bottom: -1px;
+        display: inline-block;
+    }
+
+    a {
+        display: block;
+        padding: 15px 20px;
+    }
+
+    .active a {
+        border: 1px solid $border-colour;
+        border-bottom-color: #fff;
+        text-decoration: none;
+
+        &:link,
+        &:visited {
+            color: $text-colour;
+        }
+    }
+}
+
+.form-control-xsmall {
+    width: 120px;
+}
+
+.form-control-small {
+    width: 200px;
+}
+
+dt,
+dd {
+    display: inline;
+}
+
+dt {
+    margin-right: 0.25em;
+}
+
+dl.aligned {
+    overflow: hidden;
+}
+
+dl.aligned dt {
+    width: 30%;
+    float: left;
+    margin: 0;
+    clear: both;
+}
+
+dl.aligned dd {
+    width: 70%;
+    float: right;
+}
+
+.tabs {
+    padding-left: 0;
+    border-bottom: 1px solid $border-colour;
+    font-size: 19px;
+
+    li {
+        margin-bottom: -1px;
+        display: inline-block;
+    }
+
+    a {
+        display: block;
+        padding: 15px 20px;
+    }
+
+    .active a {
+        border: 1px solid $border-colour;
+        border-bottom-color: #fff;
+        text-decoration: none;
+
+        &:link,
+        &:visited {
+            color: $text-colour;
+        }
+    }
+}
+
+.study-options-table-code {
+    width: 120px;
+}
+
+.study-options-table-vacancies {
+    width: 120px;
+}
+
+.multiple-options li {
+    margin-bottom: 5px;
+    border-bottom: 1px solid #ccc;
+}
+
+.fake-email {
+    margin-left: 15px;
+    margin-top: 20px;
+    border: 5px solid $border-colour;
+    padding: 60px;
+}
+
+.ucas-info-table tr:last-child td {
+    border-bottom: 0;
+}
+
+.ucas-info-table .ucas-view-link {
+    text-align: right;
+}
+
+.missing-section {
+    border: 5px solid $border-colour;
+    padding: $gutter / 2;
+}
+
+.preview-pre {
+    white-space: pre-wrap;
+}
+
