Fixed minor ui issues

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="heading-xlarge">
-    @*<span class="heading-secondary"></span>*@
+    <span class="heading-secondary">@Model.OrganisationName</span>
     Courses
 </h1>
 
