Fixed ui tweaks

--- a/src/ui/Views/Course/Details.cshtml
+++ b/src/ui/Views/Course/Details.cshtml
@@ -3,6 +3,13 @@
 @{
     Layout = "_Layout";
 }
+
+<div class="breadcrumbs">
+    <ol>
+        <li><a href="/courses">Courses</a></li>
+    </ol>
+</div>
+
 <h1 class="heading-xlarge">
     @Model.CourseTitle
 </h1>
