--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="heading-xlarge">
     <span class="heading-secondary">@Model.OrganisationName</span>
-    Courses
+    Courses by accrediting provider
 </h1>
 
 <div class="grid-row add-double-bottom-margin">
