Update label to one that providers are more familiar with

--- a/src/ui/Views/Course/Variants.cshtml
+++ b/src/ui/Views/Course/Variants.cshtml
@@ -31,7 +31,7 @@
             <dd>@Model.Course.ProviderCode</dd>
             <dt>Training programme code:</dt>
             <dd>@Model.Course.ProgrammeCode</dd>
-            <dt>Accredited provider:</dt>
+            <dt>Accrediting provider:</dt>
             <dd>@Model.Course.Accredited</dd>
             <dt>Route:</dt>
             <dd>@Model.Course.Route</dd>
