--- a/src/ui/Views/_ViewImports.cshtml
+++ b/src/ui/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using GovUk.Education.ManageCourses.ApiClient
 @using GovUk.Education.ManageCourses.Ui.ViewModels
+@using GovUk.Education.ManageCourses.Ui.Helpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
