--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <div class="content">
             <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
             <nav id="proposition-menu">
-                <a href="~/" id="proposition-name" role="link">@ViewData["serviceName"]</a>
+                <a href="/courses" id="proposition-name" role="link">@ViewData["serviceName"]</a>
 
 
                 <ul id="proposition-links">
