--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -61,12 +61,12 @@
 
 @section footerSupportLinks {
     <h2 class="visuallyhidden">Support links</h2>
-    @*<ul>
-            <li><a href="mailto:becomingateacher@digital.education.gov.uk?subject=Search%20beta%20feedback">Give feedback</a></li>
-            <li><a href="/cookies">Cookies</a></li>
-            <li><a href="/privacy-policy">Privacy Policy</a></li>
-            <li><a href="/terms-conditions">Terms and conditions</a></li>
-        </ul>*@
+    <ul>
+        <li><a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20feedback">Give feedback</a></li>
+        <li><a href="/cookies">Cookies</a></li>
+        <li><a href="/privacy-policy">Privacy Policy</a></li>
+        <li><a href="/terms-conditions">Terms and conditions</a></li>
+    </ul>
 }
 
 <main role="main">
