Added_google_link

--- a/src/ui/Views/Courses/Index.cshtml
+++ b/src/ui/Views/Courses/Index.cshtml
@@ -17,7 +17,7 @@
 <div class="grid-row add-double-bottom-margin">
     <div class="column-full">
         <p class="body-text">
-            You can <a href="">request a DfE Sign-in account</a> for others who manage your courses.
+            You can <a href="https://goo.gl/forms/knDj4JYC06iiZDn72">request a DfE Sign-in account</a> for others who manage your courses.
         </p>
     </div>
 </div>
