Fixed header issues

--- a/src/ui/Views/Legal/Cookies.cshtml
+++ b/src/ui/Views/Legal/Cookies.cshtml
@@ -88,30 +88,32 @@
             </table>
         </div>
 
-        <p>Other ‘Publish postgraduate teacher training courses’ cookies may include:</p>
+        <h3 class="heading-medium">
+            Other ‘Publish postgraduate teacher training courses’ cookies may include:
+        </h3>
 
-        <div class="body-text">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Purpose</th>
-                        <th>Expires</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span class="break-word">7f2a1a341274e6f7b14867772283c0c8</span></td>
-                        <td>Load balancing</td>
-                        <td>never</td>
-                    </tr>
-                    <tr>
-                        <td><span class="break-word">.AspNetCore.Cookies</span></td>
-                        <td>Used to remember your identity when signed in</td>
-                        <td>never</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+            <div class="body-text">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Purpose</th>
+                            <th>Expires</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><span class="break-word">7f2a1a341274e6f7b14867772283c0c8</span></td>
+                            <td>Load balancing</td>
+                            <td>never</td>
+                        </tr>
+                        <tr>
+                            <td><span class="break-word">.AspNetCore.Cookies</span></td>
+                            <td>Used to remember your identity when signed in</td>
+                            <td>never</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+</div>
 </div>
