Fixed styling and header issues

--- a/src/ui/Views/Legal/Cookies.cshtml
+++ b/src/ui/Views/Legal/Cookies.cshtml
@@ -89,9 +89,9 @@
         </div>
 
         <h3 class="heading-medium">
-            Other ‘Publish postgraduate teacher training courses’ cookies may include:
+            Other cookies
         </h3>
-
+        <p>‘Publish postgraduate teacher training courses’ may include:</p>
             <div class="body-text">
                 <table>
                     <thead>
