Fixed copy text

--- a/src/ui/Views/Legal/Cookies.cshtml
+++ b/src/ui/Views/Legal/Cookies.cshtml
@@ -91,7 +91,7 @@
         <h3 class="heading-medium">
             Other cookies
         </h3>
-        <p>Other ‘Publish postgraduate teacher training courses’ may include:</p>
+        <p>Other ‘Publish postgraduate teacher training courses’ cookies may include:</p>
             <div class="body-text">
                 <table>
                     <thead>
